# meu_tcc

./: .gitignore  main.py  pyproject.toml
datasets/: README.md
notebooks/: 0 - Analise de dados - LOCCA.ipynb  1 - Pré-processamento.ipynb  2 - Primeira Fase de Avaliacao.ipynb  2 - Treinamento SMP.ipynb  3 - Segunda Fase - Treinamento com SMP.ipynb  3- Agregação dos Resultados.ipynb  4- Visualizando Predicoes.ipynb
results/: log_gpu_nvidia-smi.txt
results/phase_1/csvs/: test_epoch_results.csv  times_results.csv  train_and_test_time.csv  train_epoch_results.csv  vram.csv
results/phase_1/pngs_paths/: kfolditer1_train.pkl
results/phase_1/pngs_paths/dpt_256x256_pngs_preproc/repet1/: kfolditer1_test.pkl  kfolditer3_test.pkl  kfolditer3_train.pkl  kfolditer4_test.pkl
results/phase_1/pngs_paths/dpt_256x256_pngs_preproc/repet2/: kfolditer0_test.pkl  kfolditer0_train.pkl
results/phase_1/pngs_paths/dpt_256x256_pngs_preproc/repet3/: kfolditer2_test.pkl  kfolditer2_train.pkl  kfolditer4_train.pkl
results/phase_2/pngs_paths/deeplab_256x256_pngs/repet2/: kfolditer0_test.pkl  kfolditer1_train.pkl
results/phase_2/pngs_paths/deeplab_256x256_pngs/repet3/: kfolditer0_train.pkl
results/phase_2/pngs_paths/dpt_256x256_pngs/repet1/: kfolditer3_train.pkl
results/phase_2/pngs_paths/dpt_256x256_pngs/repet3/: kfolditer2_train.pkl  kfolditer3_test.pkl  kfolditer4_train.pkl
src/: constants.py  data.py  kfold.py  module.py
src/utils/: checkpoint.py  load_image_and_annotation.py  metrics.py
src/utils/telegram_bot/: echobot.py
(+244 files in other folders)
